# Spark

./: .claude.md  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.claude/memory/: MEMORY.md
.claude/skills/: commit.md
docs/superpowers/specs/: 2026-05-10-agent-loop-design.md  2026-06-16-spark-cli-coding-agent-design.md
examples/: basic_agent.py  test_connection.py
spark/: __init__.py  agent.py  schema.py  tool.py
spark/logging/: __init__.py  formatters.py  handlers.py  logger.py  tracing.py
spark/memory/: __init__.py  conversation.py
spark/prompts/: __init__.py  base.py  templates.py
spark/server/: __init__.py  admin_routes.py  app.py  log_broadcaster.py  log_service.py  routes.py  session.py  session_store.py
spark/server/static/: admin.html  app.js  index.html  style.css
spark/tools/: __init__.py  file.py  safety.py  search.py  shell.py
src/: agent.ts  cli.ts  config.ts  index.ts  llm.ts  logger.ts  memory.ts  prompt.ts  render.ts  run-with-signal.ts  safety.ts  task-planner.ts  token-counter.ts  token-tracker.ts  undo-manager.ts
src/tools/: dev.ts  file.ts  index.ts  search.ts  shell.ts  web.ts
tests/: __init__.py  agent.test.ts  cli.test.ts  config.test.ts  integration.test.ts  llm.test.ts  memory.test.ts  render.test.ts  safety.test.ts  test_agent.py  test_agent_logging.py  test_agent_stream.py  test_conversation.py  test_prompts.py  test_schema.py  test_session.py  test_session_store.py  test_tool.py
tests/test_logging/: __init__.py  test_formatters.py  test_handlers.py  test_logger.py  test_tracing.py
tests/test_tools/: __init__.py  test_file.py  test_integration.py  test_safety.py  test_search.py  test_shell.py
tests/tools/: dev-injection.test.ts  dev.test.ts  file.test.ts  search.test.ts  shell.test.ts  web.test.ts
